# motly

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  VISION.md
.github/workflows/: publish.yaml
bindings/typescript/: CONTEXT.md
bindings/typescript/interface/: package-lock.json  package.json  tsconfig.json
bindings/typescript/interface/src/: types.ts
bindings/typescript/parser/: README.md  package-lock.json  package.json  tsconfig.json
bindings/typescript/parser/src/: ast.ts  clone.ts  index.ts  interpreter.ts  mot.ts  parser.ts  resolve.ts  session.ts  validate.ts
bindings/typescript/parser/test/: mot.test.ts  resolve.test.ts  test.ts  tsconfig.json
docs/: interpreter.md  language.md  mot-api-python.md  mot-api-rust.md  motly-grammar.md  motly-typescript.md  motly_schema.motly  schema.md  schema_spec.md
scripts/: release.sh
src/: ast.rs  error.rs  from_json.rs  interpreter.rs  json.rs  lib.rs  main.rs  parser.rs  tests.rs  tree.rs  validate.rs
test-data/: k8s-deployment-sample.motly  k8s-deployment-schema.motly
test-data/fixtures/: parse-errors.json  parse.json  refs.json  schema.json  session.json
